# c_contest

./: .gitignore  CMakeLists.txt  README.md  new_problem.sh
Bai 3/: Contest.md
Bai1/: CMakeLists.txt  Contest.md  main.c
Bai10/: CMakeLists.txt  contest.md  main.cpp
Bai11/: CMakeLists.txt  contest.md  main.c
Bai12/: CMakeLists.txt  Contest.md  main.c
Bai13/: CMakeLists.txt  Contest.md  main.c
Bai14/: CMakeLists.txt  Contest.md  main.c
Bai15/: CMakeLists.txt
Bai16/: CMakeLists.txt
Bai17/: CMakeLists.txt  Contest.md  main.c
Bai18/: CMakeLists.txt  Contest.md
Bai2/: CMakeLists.txt  Contest.md  main.cpp
Bai3/: CMakeLists.txt  main.c
Bai4/: CMakeLists.txt  Contest.md  main  main.c
Bai4/main.dSYM/Contents/Resources/DWARF/: main
Bai4/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
Bai5/: CMakeLists.txt  Contest.md  main.c
Bai6/: CMakeLists.txt  contest.md  main.c
Bai7/: CMakeLists.txt  contest.md  main.c
Bai8/: CMakeLists.txt  contest.md  main.c
Bai9/: CMakeLists.txt  contest.md  main.c
untitled/: main.c
